--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -1,7 +1,7 @@
 {% extends 'dashboards/all_admin_pages/base.html' %}
 {% load static %}
 {% block section %}
-<div class="m-3 rounded-lg">
+<div class="m-3 rounded-lg mb-3">
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">{{class.name}} STUDENTS</p>
     <div class="order flex">
         <div class="grid grid-cols sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
@@ -39,17 +39,40 @@
     </div>
 
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600 mt-3" style="background-color: #F9F9F9;">{{class.name}} TIMETABLE</p>
-    
-            <table class="table-auto w-full text-left mt-6">
-                <thead>
-                    <tr>
-                        <th class="px-2 py-2">Day of Week</th>
-                        <th class="px-2 py-2">Subject</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    
-            </table>
+    <div class="table-data">
+    <div>
+    <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
+        <thead>
+            <tr>
+                <th class="py-2 px-2 border-b border-r  border-gray-300 text-gray-600">Days</th>
+                <th class="py-2 px-2 border-b border-gray-300 text-gray-600">Subjects</th>
+                <th class="py-2 px-2 border-b border-gray-300"></th>
+                <th class="py-2 px-2 border-b border-gray-300"></th>
+                <th class="py-2 px-2 border-b border-gray-300"></th>
+                <th class="py-2 px-2 border border-gray-300 text-gray-600">BREAK</th>
+                <th class="py-2 px-2 border-b border-gray-300"></th>
+                <th class="py-2 px-2 border-b border-gray-300"></th>
+                <th class="py-2 px-2 border-b border-gray-300"></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for timetable in timetables %}
+            <tr>
+                <td class="py-4 px-4 border-b border-r border-gray-300">{{ timetable.day_of_week }}</td>
+                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_one.name }}<br>{{ timetable.subject_one_start_time }}-{{ timetable.subject_one_end_time }}</td>
+                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_two.name }}<br>{{ timetable.subject_two_start_time }}-{{ timetable.subject_two_end_time }}</td>
+                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_three.name }}<br>{{ timetable.subject_three_start_time }}-{{ timetable.subject_three_end_time }}</td>
+                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_four.name }}<br>{{ timetable.subject_four_start_time }}-{{ timetable.subject_four_end_time }}</td>
+                <td class="py-4 px-4 border border-gray-300 ">BREAK</td>
+                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_five.name }}<br>{{ timetable.subject_five_start_time }}-{{ timetable.subject_five_end_time }}</td>
+                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_six.name }}<br>{{ timetable.subject_six_start_time }}-{{ timetable.subject_six_end_time }}</td>
+                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_seven.name }}<br>{{ timetable.subject_seven_start_time }}-{{ timetable.subject_seven_end_time }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+    </div>
         
 </div>
 {%endblock section%}
