--- a/templates/dashboards/base.html
+++ b/templates/dashboards/base.html
@@ -6,11 +6,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
     <title>Admin Dashboard</title>
 </head>
+<style>
+    .class-form{
+        width: 30%;
+        padding: 7px;
+        border-radius: 8px;
+    }
+</style>
 <body>
 
 {%block content%}
@@ -18,9 +28,38 @@
 {%endblock content%}
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 <script src="{% static 'js/script.js' %}"></script>
+<script>
+    $(document).ready(function(){
+        $('.timepicker').timepicker({
+            timeFormat: 'HH:mm', // 24-hour format
+            interval: 60,
+            minTime: '00:00',
+            maxTime: '23:59',
+            defaultTime: '__:__',
+            startTime: '00:00',
+            dynamic: false,
+            dropdown: true,
+            scrollbar: true
+        });
+    });
 
+    $(document).ready(function() {
+          $('.select2-multiple').select2();
+        });
+
+    $(function() {
+    $("#accordion").accordion({
+        collapsible: true, // Allows all sections to be collapsible
+        active: false,     // Starts with all sections collapsed
+        heightStyle: "content" // Adjusts height based on content
+    });
+});
+</script>
 
 </body>
 </html>
