--- a/templates/administration/add_student.html
+++ b/templates/administration/add_student.html
@@ -27,13 +27,13 @@
       </div>
   
       <div class="mb-4">
-        {{ form.parent_or_guildiance_name.label_tag }}
-        {{form.parent_or_guildiance_name}}
+        {{ form.parent_or_guardian_name.label_tag }}
+        {{form.parent_or_guardian_name}}
       </div>
   
       <div class="mb-4">
-        {{ form.parent_or_guildiance_phone_number.label_tag }}
-        {{form.parent_or_guildiance_phone_number}}
+        {{ form.parent_or_guardian_phone_number.label_tag }}
+        {{form.parent_or_guardian_phone_number}}
       </div>
   
       <div class="mb-4">
