--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -58,21 +58,21 @@
         <tbody>
             {% for timetable in timetables %}
             <tr>
-                <td class="py-4 px-4 border-b border-r border-gray-300">{{ timetable.day_of_week }}</td>
-                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_one.name }}<br>{{ timetable.subject_one_start_time }}-{{ timetable.subject_one_end_time }}</td>
-                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_two.name }}<br>{{ timetable.subject_two_start_time }}-{{ timetable.subject_two_end_time }}</td>
-                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_three.name }}<br>{{ timetable.subject_three_start_time }}-{{ timetable.subject_three_end_time }}</td>
-                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_four.name }}<br>{{ timetable.subject_four_start_time }}-{{ timetable.subject_four_end_time }}</td>
-                <td class="py-4 px-4 border border-gray-300 ">BREAK</td>
-                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_five.name }}<br>{{ timetable.subject_five_start_time }}-{{ timetable.subject_five_end_time }}</td>
-                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_six.name }}<br>{{ timetable.subject_six_start_time }}-{{ timetable.subject_six_end_time }}</td>
-                <td class="py-4 px-4 border-b border-gray-300 ">{{ timetable.subject_seven.name }}<br>{{ timetable.subject_seven_start_time }}-{{ timetable.subject_seven_end_time }}</td>
+                <td class="py-2 px-2 border-b border-r border-gray-300">{{ timetable.day_of_week }}<br><a href="{%url 'edit_timetable' table_id=timetable.id%}" class="text-blue-500">Edit</a></td>
+                <td class="py-2 px-2 border-b border-gray-300 ">{{ timetable.subject_one.name }}<br>{{ timetable.subject_one_start_time }}-{{ timetable.subject_one_end_time }}</td>
+                <td class="py-2 px-2 border-b border-gray-300 ">{{ timetable.subject_two.name }}<br>{{ timetable.subject_two_start_time }}-{{ timetable.subject_two_end_time }}</td>
+                <td class="py-2 px-2 border-b border-gray-300 ">{{ timetable.subject_three.name }}<br>{{ timetable.subject_three_start_time }}-{{ timetable.subject_three_end_time }}</td>
+                <td class="py-2 px-2 border-b border-gray-300 ">{{ timetable.subject_four.name }}<br>{{ timetable.subject_four_start_time }}-{{ timetable.subject_four_end_time }}</td>
+                <td class="py-2 px-2 border border-gray-300 ">BREAK</td>
+                <td class="py-2 px-2 border-b border-gray-300 ">{{ timetable.subject_five.name }}<br>{{ timetable.subject_five_start_time }}-{{ timetable.subject_five_end_time }}</td>
+                <td class="py-2 px-2 border-b border-gray-300 ">{{ timetable.subject_six.name }}<br>{{ timetable.subject_six_start_time }}-{{ timetable.subject_six_end_time }}</td>
+                <td class="py-2 px-2 border-b border-gray-300 ">{{ timetable.subject_seven.name }}<br>{{ timetable.subject_seven_start_time }}-{{ timetable.subject_seven_end_time }}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
     </div>
-        
+    <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg">Delete Class</a></p>
 </div>
 {%endblock section%}
