--- a/templates/dashboards/all_admin_pages/teacher_details.html
+++ b/templates/dashboards/all_admin_pages/teacher_details.html
@@ -28,9 +28,12 @@
                             <li>Emergency Contact: {{teacher.emergency_contact}}</li>
                           </ul>
                         </div>
-                  </div>
+                        <div class="flex">
+                          <div class="text-left p-3 mb-3 font-normal text-white"><a href="{%url 'edit_teacher' teacher_id=teacher.id%}" class="bg-blue-500 p-3 rounded-lg">Edit Teacher</a></div>
+                          <div class="text-left p-3 mb-3 font-normal text-white text-right"><a href="{%url 'delete_teacher' teacher_id=teacher.id%}" class="bg-red-500 p-3 rounded-lg">Delete Teacher</a></div>
+                        </div>
+                      </div>
                 </div>
               </section>
-        </div>
 </div>
 {% endblock %}
