--- a/templates/dashboards/base.html
+++ b/templates/dashboards/base.html
@@ -16,10 +16,37 @@
 </head>
 <style>
     .class-form{
-        width: 30%;
+        width: 50vi;
+        padding: 7px;
+        border-radius: 8px;
+        text-align: center;
+    }
+    .annoucement-title{
+        width: 50vi;
         padding: 7px;
         border-radius: 8px;
     }
+    .annoucement-decription{
+        width: 50vi;
+        height: 20vi;
+        padding: 7px;
+        border-radius: 8px;
+    }
+    .annoucement-suject{
+        font-size: larger;
+        font-weight: bold;
+        width: 50vi;
+        padding: 7px;
+        border-radius: 8px;
+        height: 4vi;
+    }
+    .annoucement_suject{
+        font-size: x-large;
+        font-weight: bold;
+        text-align: center;
+        padding: 10px 0 20px 0;
+}
+
 </style>
 <body>
 
