--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -39,6 +39,11 @@
     </div>
 
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600 mt-3" style="background-color: #F9F9F9;">{{class.name}} TIMETABLE</p>
+    {% if messages %}
+    {% for message in messages %}
+    <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
+    {% endfor %}
+    {% endif %}
     <div class="table-data">
     <div>
     <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
@@ -73,6 +78,7 @@
     </table>
 </div>
     </div>
+    <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'edit_class' class_id=class.id%}" class="bg-blue-500 p-3 rounded-lg">Edit Class</a></p>
     <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg">Delete Class</a></p>
 </div>
 {%endblock section%}
