--- a/templates/dashboards/all_admin_pages/delete_student.html
+++ b/templates/dashboards/all_admin_pages/delete_student.html
@@ -8,7 +8,7 @@
     <h1 class="text-3xl font-bold my-8">Delete student</h1>
     <h2 class="text-2xl font-medium my-3">Are you sure you want to delete this student?</h2>
     <p class="text-2xl text-gray-600 font-medium my-3">{{ student.user.first_name }} {{ student.user.last_name }}</p>
-    <form action="{% url 'delete_student' user.id %}" method="post" enctype="multipart/form-data" class="rounded-lg w-full max-w-md">
+    <form action="{% url 'delete_student' student_id=student.id %}" method="post" enctype="multipart/form-data" class="rounded-lg w-full max-w-md">
         {% csrf_token %}
         <div class="flex justify-between my-8">
             <a href="{%url 'student_detail' student.user.id%}" class="bg-blue-500 text-white py-2 px-4 rounded-md mb-3">Go Back</a>
