--- a/templates/dashboards/all_admin_pages/myTeachers.html
+++ b/templates/dashboards/all_admin_pages/myTeachers.html
@@ -3,6 +3,11 @@
 {% block section %}
 <div class="m-3 rounded-lg text-black">
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL TEACHERS</p>
+    {% if messages %}
+    {% for message in messages %}
+    <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
+    {% endfor %}
+    {% endif %}
     <div class="order flex">
         <div class="grid grid-cols sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
             {%if teacher%}
