--- a/templates/dashboards/all_admin_pages/student_details.html
+++ b/templates/dashboards/all_admin_pages/student_details.html
@@ -4,6 +4,11 @@
 <div class="m-3 rounded-lg">
     <section class="bg-background flex flex-col items-center justify-center text-black">
         <div class="bg-card w-full max-w-3xl rounded-lg shadow-lg overflow-hidden">
+            {% if messages %}
+            {% for message in messages %}
+            <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
+            {% endfor %}
+            {% endif %}
             <div class="py-8 px-4" style="background-color: #F9F9F9;">
                 <a href="{{ student.user.profile_photo.url }}" data-lightbox="user-image" data-title="{{student.user.first_name}} {{student.user.last_name}}">
                     <img src="{{ student.user.profile_photo.url }}" alt="{{ student.user.first_name }} {{ student.user.last_name }}" style="height: 200px; width: 300px;" class="rounded-lg mx-auto border-4 border-background" />
