--- a/templates/dashboards/all_admin_pages/subjects.html
+++ b/templates/dashboards/all_admin_pages/subjects.html
@@ -3,7 +3,8 @@
 {% block section %}
 
 <div class="m-3 text-black rounded-lg">
-    <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Create Subject</p>        
+    <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Create Subject</p>  
+        <div class="flex justify-center">   
         <form action="{%url 'create_subject'%}" method="post">
             {%csrf_token%}
             {{form.name.label_tag}}
@@ -12,6 +13,7 @@
             <br>
             <button class="mt-3 bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-primary/80 transition-colors">Create</button>    
         </form>
+        </div>   
 
 
 </div>
