--- a/templates/dashboards/all_admin_pages/timetable.html
+++ b/templates/dashboards/all_admin_pages/timetable.html
@@ -2,138 +2,24 @@
 {% load static %}
 {% block section %}
 
-<!-- Form for Timetable Creation or Editing -->
-<div class="m-3 rounded-lg text-black">
- <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">CREATE TIMETABLE</p>
-<div class="rounded-lg p-3" style="background-color: #F9F9F9;">
-    <form action="{% url 'create_timetable' %}" method="post" enctype="multipart/form-data">
-    {%csrf_token%}
-    <div class="mb-6">
-        {{ form.class_info.label_tag }}
-        {{ form.class_info }}
-    </div>
-    <div class="mb-6">
-        {{ form.day_of_week.label_tag }}
-        {{ form.day_of_week }}
-    </div>
-
-    <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-7 gap-1">
-    <div class="border p-1">
-        <div class="mb-2">
-            <span>First subject <br></span>
-            {{form.subject_one}}
-        </div>
-    
-        <div class="mb-2">
-            <span>Start time <br></span>  
-            {{form.subject_one_start_time}}
-        </div>
-        <div class="mb-2">
-            <span>End time <br></span>
-            {{form.subject_one_end_time}}
-        </div>
-    </div>
-
-    <div class="border p-1">
-        <div class="mb-2">
-            <span>Second subject <br></span>
-            {{form.subject_two}}
-        </div>
-    
-        <div class="mb-2">
-            <span>Start time <br></span>  
-            {{form.subject_two_start_time}}
-        </div>
-        <div class="mb-2">
-            <span>End time <br></span>
-            {{form.subject_two_end_time}}
-        </div>
-    </div>
-
-    <div class="border p-1">
-        <div class="mb-2">
-            <span>Third subject <br></span>
-            {{form.subject_three}}
-        </div>
-    
-        <div class="mb-2">
-            <span>Start time <br></span>  
-            {{form.subject_three_start_time}}
-        </div>
-        <div class="mb-2">
-            <span>End time <br></span>
-            {{form.subject_three_end_time}}
-        </div>
-    </div>
-
-    <div class="border p-1">
-        <div class="mb-2">
-            <span>Fourth subject <br></span>
-            {{form.subject_four}}
-        </div>
-    
-        <div class="mb-2">
-            <span>Start time <br></span>  
-            {{form.subject_four_start_time}}
-        </div>
-        <div class="mb-2">
-            <span>End time <br></span>
-            {{form.subject_four_end_time}}
-        </div>
-    </div>
-
-    <div class="border p-1">
-        <div class="mb-2">
-            <span>Fifth subject <br></span>
-            {{form.subject_five}}
-        </div>
-    
-        <div class="mb-2">
-            <span>Start time <br></span>  
-            {{form.subject_five_start_time}}
-        </div>
-        <div class="mb-2">
-            <span>End time <br></span>
-            {{form.subject_five_end_time}}
-        </div>
-    </div>
-
-    <div class="border p-1">
-        <div class="mb-2">
-            <span>Sixth subject <br></span>
-            {{form.subject_six}}
-        </div>
-    
-        <div class="mb-2">
-            <span>Start time <br></span>  
-            {{form.subject_six_start_time}}
-        </div>
-        <div class="mb-2">
-            <span>End time <br></span>
-            {{form.subject_six_end_time}}
-        </div>
-    </div>
-
-    <div class="border p-1">
-        <div class="mb-2">
-            <span>Seventh subject <br></span>
-            {{form.subject_seven}}
-        </div>
-    
-        <div class="mb-2">
-            <span>Start time <br></span>  
-            {{form.subject_seven_start_time}}
-        </div>
-        <div class="mb-2">
-            <span>End time <br></span>
-            {{form.subject_seven_end_time}}
-        </div>
-    </div>
-    </div>
-
-    <button type="submit" class="bg-gray-300 p-3 rounded-lg mt-2 text-gray-600 hover:text-gray-800">Create</button>
-</form>
-</div>
+<div class="m-3 text-black rounded-lg">
+    <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL Classes</p>
+    {% if messages %}
+    {% for message in messages %}
+    <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
+    {% endfor %}
+    {% endif %}
+    <ul class="grid grid-cols sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 text-center" >
+        {% if classes %}
+        {% for class in classes %}
+        <a href="{%url 'create_class_timetable' class_id=class.id%}">
+            <li class="p-5 rounded-lg font-medium text-gray-700" style="background-color: #F9F9F9;">{{ class.name }}</li>
+        </a>
+        {% endfor %}
+        {% else %}
+        <p>No classes available</p>
+        {% endif %}
+    </ul>
 </div>
 
 {% endblock section %}
