--- a/templates/dashboards/all_teacher_pages/student_details.html
+++ b/templates/dashboards/all_teacher_pages/student_details.html
@@ -1,4 +1,4 @@
-{% extends 'dashboards/all_admin_pages/base.html' %}
+{% extends 'dashboards/all_teacher_pages/base.html' %}
 {% load static %}
 {% block section %}
 <div class="m-3 rounded-lg">
@@ -23,6 +23,7 @@
                         <li>Class: {{ student.student_class }}</li>
                     </ul>
                 </div>
+                {%if request.user is superuser%}
                 <div class="bg-card p-4 rounded-lg my-4">
                     <h2 class="text-lg font-bold">Contact</h2>
                     <ul class="text-sm mt-2">
@@ -33,6 +34,8 @@
                         <li>Parent/Guardian Email: {{ student.parent_email }}</li>
                     </ul>
                 </div>
+                {%else%}
+                {%endif%}
                 {%if request.user is superuser%}
                 <div class="flex">
                     <div class="text-left p-3 mb-3 font-normal text-white"><a href="{%url 'edit_student' student_id=student.id%}" class="bg-blue-500 p-3 rounded-lg">Edit Student</a></div>
