--- a/templates/dashboards/all_admin_pages/create_class_timetable.html
+++ b/templates/dashboards/all_admin_pages/create_class_timetable.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-7 gap-1">
-    <div class="border p-1">
+    <div class="border-2 border-gray-400 p-1">
         <div class="mb-2">
             <span>First subject <br></span>
             {{form.subject_one}}
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="border p-1">
+    <div class="border-2 border-gray-400 p-1">
         <div class="mb-2">
             <span>Second subject <br></span>
             {{form.subject_two}}
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div class="border p-1">
+    <div class="border-2 border-gray-400 p-1">
         <div class="mb-2">
             <span>Third subject <br></span>
             {{form.subject_three}}
@@ -65,7 +65,7 @@
         </div>
     </div>
 
-    <div class="border p-1">
+    <div class="border-2 border-gray-400 p-1">
         <div class="mb-2">
             <span>Fourth subject <br></span>
             {{form.subject_four}}
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <div class="border p-1">
+    <div class="border-2 border-gray-400 p-1">
         <div class="mb-2">
             <span>Fifth subject <br></span>
             {{form.subject_five}}
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <div class="border p-1">
+    <div class="border-2 border-gray-400 p-1">
         <div class="mb-2">
             <span>Sixth subject <br></span>
             {{form.subject_six}}
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <div class="border p-1">
+    <div class="border-2 border-gray-400 p-1">
         <div class="mb-2">
             <span>Seventh subject <br></span>
             {{form.subject_seven}}
