--- a/templates/dashboards/all_teacher_pages/teachers.html
+++ b/templates/dashboards/all_teacher_pages/teachers.html
@@ -2,6 +2,8 @@
 {%load static%}
 {%block content%}
 
+{% url 'teacher_class_list' as teacher_class_list %}
+
     <!-- SIDEBAR -->
     <section id="sidebar">
         <a href="" class="brand">
@@ -15,8 +17,8 @@
                     <span class="text">Dashboard</span>
                 </a>
             </li>
-            <li>
-                <a href="#">
+            <li class="{%if request.path == teacher_class_list%}active{%else%}{%endif%}">
+                <a href="{{teacher_class_list}}">
                     <i class='bx bxs-building-house' ></i>
                     <span class="text">My Classes</span>
                 </a>
@@ -69,7 +71,7 @@
                 <i class='bx bxs-bell' ></i>
                 <span class="num">8</span>
             </a>
-            <a href="#" class="profile">
+            <a href="{%url 'teacher_details_page' teacher_id=request.user.id%}" class="profile">
                 <img src="{{ request.user.profile_photo.url }}" alt="Profile Photo">
             </a>
          </nav>
