--- a/templates/dashboards/all_teacher_pages/class_details.html
+++ b/templates/dashboards/all_teacher_pages/class_details.html
@@ -89,8 +89,51 @@
     {%else%}
     {%endif%}
 
-    class_attendance_records
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600 mt-3" style="background-color: #F9F9F9;">{{class.name}} Attendance Record</p>
+
+    <div class="p-3 rounded-lg" style="background-color: #F9F9F9;">
+        <h1 class="text-2xl font-bold mb-4">MONTHLY ATTENDANCE SHEET</h1>
+          <table class="min-w-full border-collapse border border-zinc-400">
+            <thead>
+            <tr>
+              <th class="border border-zinc-400 bg-blue-200 p-1">STUDENT NAME </th>
+              {% for day, label in weekdays_in_month %}
+            <th class="border border-zinc-400 bg-{{ label|lower }}-200 p-1 bg-gray-200">
+                {{ day }}<br>{{ label }}
+            </th>
+            {% endfor %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for student, attendance in attendance_data.items %}
+            <tr>
+                <td class="border border-zinc-400 p-2">
+                    {{ student }}
+                </td>
+                {% for status in attendance %}
+            <td class="border border-zinc-400 p-2">
+                {% if status is True %}
+                    <i class="fa fa-check text-green-500"></i>
+                {% elif status is False %}
+                    <i class="fa fa-times text-red-500"></i>
+                {% else %}
+                    <i class="fa fa-minus text-gray-500"></i> <!-- No record -->
+                {% endif %}
+            </td>
+            {% endfor %}
+            </tr>
+            {% endfor %}
+        </tbody>
+        </table>
+        <a href="#" type="submit" class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg">Save Attendance</a></button>
+      </div>
+
+
+
+      
+
+
+
 
 </div>
 {%endblock section%}
